--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical"
     tools:context=".DetailsActivity">
 
+    <Button
+        android:id="@+id/btnBackDet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back" />
+
     <ImageView
         android:id="@+id/imgCharDetail"
         android:layout_width="wrap_content"
